--- a/InfoSec.tex
+++ b/InfoSec.tex
@@ -39,5 +39,12 @@
 \input{Lecture14}}{
 \input{Lecture15}}{
 \input{Lecture16}}{
+\input{Lecture17}}{
+\input{Lecture18}}{
+\input{Lecture19}}{
+\input{Lecture20}}{
+\input{Lecture21}}{
+\input{Lecture22}}{
+\input{Lecture23}}{
 
 }\end{document}
