--- a/Lecture21.tex
+++ b/Lecture21.tex
@@ -27,15 +27,14 @@
 
 \textbf{A world with perfect information and perfect bargaining} would be SP efficient and KH efficient. 
 
-\begin{proof}
+\textit{Proof:}\\
 \textbf{SP efficiency:} By contradiction: \\
 	Suppose outcome is not SP efficient. Then an alternative exists that is SP superior to outcome. Then bargaining would lead to that alternative.
 
 \textbf{KH efficiency:} also by contradiction:
 	Suppose outcome is not KH efficient. Then there is an alternative A, payments P that A + P is SP superior to outcome. Therefore, outcome is not KH-efficient.
-\end{proof}
 
-So, there must be some market failure happening because the world is certainly not SP efficient (and thus certainly not KH efficient).
+So, there must be some market failure happening because the world is certainly not SP efficient (and thus certainly not KH efficient). \textit{Note that the goal is not maximum security, but efficent security. Invest in a solution only if TOTAL BENEFIT $>$ TOTAL COST}
 
 \subsektion{Market Failure 1}
 \textit{Negative extenalities} (think spam, DDoS). The user will invest in reducing harm to self, but not in reducing harm to strangers. So here, there is an underinvestment in security because there is an external harm (beyond producer to buyer), and bargaining to fix externalities is not possible in the real world.
