--- a/InfoSec.tex
+++ b/InfoSec.tex
@@ -23,6 +23,7 @@
 
 \input{InfoSecTitle}}{  % Title page, Contents
 
+\input{CourseInfo}}{
 \input{Lecture01}}{
 \input{Lecture02}}{
 \input{Lecture03}}{
