--- a/InfoSecPreamble.tex
+++ b/InfoSecPreamble.tex
@@ -8,7 +8,12 @@
  \usepackage{fancybox}      % More outline options for boxes
  \usepackage{mathrsfs}      % Sheafy font \mathscr{}
  \usepackage{multirow}      % For tables
- \usepackage{pstricks}      % PSTricks!
+ 
+ %% (this package is not needed for the 2015-01-19 version of this manuscript
+ %% and beyond)
+ %%
+ %% \usepackage{pstricks}      % PSTricks!
+ 
  \usepackage{rotating}      % Rotate text
  \usepackage{xcolor}        % For colors (links)
  \usepackage[all]{xy}       % Include XY-pic
