--- a/Lecture01.tex
+++ b/Lecture01.tex
@@ -1,11 +1,5 @@
 %!TEX root = InfoSec.tex 
-% Lecture 1: 10 September 2014
-\sektion{0}{Course Information}
-Professor: Ed Felten
-
-Website: \url{http://bit.ly/1wcHQIT} and Piazza
-
-Lectures: 11am Monday, Wednesday in McCosh 50
+% Lecture 1: 10 September 2014 with Ed Felten
 
 \sektion{1}{Message Integrity}
 \subsektion{Sending messages}
